# endjin-pyspark-examples

./: .gitignore  LICENSE  README.md  behave.ini  pyproject.toml
notebooks/sqlbits_2026/: download_land_registry_data.ipynb  polars_demo.ipynb  pyspark_demo.ipynb  summarise_land_registry_data.ipynb
src/data_importers/: __init__.py  land_registry_importer.py
src/data_wrangler/: __init__.py  data_wrangler.py  schema_price_paid_data.py
tests/bdd/: environment.py
tests/bdd/features/: build_date_dimension.feature  drop_records_without_date.feature  drop_rows_with_no_postcode.feature  extract_postcode_area.feature  extract_postcode_district.feature  extract_year_from_date.feature  filter_other_type.feature  rename_duration.feature  rename_old_new.feature  rename_property_type.feature  run_pipeline.feature  sort_by_year_and_property_type.feature  summarise_data.feature  validate_raw_data.feature
tests/bdd/steps/: build_date_dimension_steps.py  common_steps.py  drop_records_without_date_steps.py  drop_rows_with_no_postcode_steps.py  extract_postcode_area_steps.py  extract_postcode_district_steps.py  extract_year_from_date_steps.py  filter_other_type_steps.py  rename_duration_steps.py  rename_old_new_steps.py  rename_property_type_steps.py  run_pipeline_steps.py  sort_by_year_and_property_type_steps.py  summarise_data_steps.py  validate_raw_data_steps.py
tests/bdd/test_data/: pp-sample.csv
