[project]
name = "endjin-polars-examples"
version = "0.1.0"
description = "Open source examples for data engineering with Polars."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pyspark>=4.1.1",
    "requests",
    "arrow",
    "ipykernel",
    "pyarrow",
    "plotly[express]",
    "nbformat",
    "azure-storage-file-datalake",
    "azure-identity",
    "wbgapi",
    "xlsxwriter",
    "duckdb",
    "pandas<3.0",
    "nbconvert",
    "fsspec",
    "deltalake",
    "behave",
    "pytest",
    "pandera[pyspark]>=0.30.1",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/data_importers", "src/data_wrangler"]
