[project]
name = "endjin-pyspark-examples"
version = "0.1.0"
description = "Open source examples for data engineering with PySpark."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pyspark",
    "pandera[pyspark]",
    "pandas<3.0",
    "requests",
    "fsspec",
    "delta-spark>=4.2.0",
]

[dependency-groups]
dev = [
    "behave",
    "ipykernel",
    "plotly[express]",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/data_importers", "src/data_wrangler"]
